--- a/nightreigncs/nightreigncs/static/css/base.css
+++ b/nightreigncs/nightreigncs/static/css/base.css
@@ -1,6 +1,6 @@
-body {
+body, html {
   display: flex;
-  height: 100%;
+  height: 100vh;
 }
 
 .locations-column {
@@ -53,9 +53,11 @@ body {
 }
 
 .character-section {
+  flex: 1;
+  min-height: 0; /* allows flex child to shrink properly */
+  overflow: hidden;
   display: flex;
   flex-direction: column;
-  height: 85%;
 }
 
 .tab-container {
@@ -86,22 +88,26 @@ body {
 
 .tab-content-container {
   flex-grow: 1;
-  overflow-y: auto;
+  overflow: hidden; /* don't allow scrollbars */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  max-height: 100%;
 }
 
 .tab-content {
-  display: none;
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100%;
-}
-
-.tab-content.active {
-  display: block;
 }
 
 .tab-content img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
   object-fit: contain;
 }
 
