--- a/nightreigncs/nightreigncs/static/css/base.css
+++ b/nightreigncs/nightreigncs/static/css/base.css
@@ -157,7 +157,7 @@ h3 {
 }
 
 .tab-content {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   height: 100%;
