--- a/nightreigncs/nightreigncs/static/css/base.css
+++ b/nightreigncs/nightreigncs/static/css/base.css
@@ -20,10 +20,13 @@ h3 {
   font-weight: 600;
 }
 
+/* LOCATIONS COLUMN*/
+
 .locations-wrapper {
   height: 100vh; /* Adjust as needed */
   overflow: hidden;
   position: relative;
+  width: 20%
 }
 
 .auto-scroll {
@@ -45,13 +48,6 @@ h3 {
 }
 
 .locations-column {
-  /* will-change: transform;
-  width: 100%;
-  height: 100vh;
-  overflow-y: auto;
-  flex-shrink: 0;
-  scrollbar-width: thin;
-  scrollbar-color: #152142 black; */
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -59,9 +55,10 @@ h3 {
 
 .location-item {
   display: flex;
-  margin: 0.5rem 1rem;
+  margin: 0.1rem;
   border: 1px solid rgb(9, 21, 56);
-  padding: 0.5rem 1rem;
+  border-radius: 15px;
+  padding: 0.5rem;
   align-items: center;
   max-height: 80px;
   overflow: hidden;
@@ -91,12 +88,36 @@ h3 {
   width: auto;
 }
 
+/* INFO COLUMN */
+
 .info-column {
   width: 80%;
   height: 100%;
   display: flex;
   flex-direction: column;
 }
+
+/* NIGHTFARERS SECTION */
+
+/* LEVEL REQUIREMENTS */
+
+.level-up-costs {
+  width: 12%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  padding-left: 1rem;
+}
+
+.level-up-costs table {
+  font-family: "Cinzel", serif;
+}
+
+.table-main-col {
+  color: #fcb700;
+}
+
+/* NIGHTFARERS */
 
 .character-section {
   flex: 1;
@@ -112,14 +133,14 @@ h3 {
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-around;
-  border-top: 1px solid #152142;
-  border-bottom: 1px solid #152142;
+  border: 1px solid #152142;
+  border-radius: 20px;
 }
 
 .tab-item {
   padding: 15px 20px;
   cursor: pointer;
-  border-right: 1px solid #152142;
+  border-radius: 20px;
   flex-grow: 1;
   text-align: center;
   font-family: "Cinzel", serif;
@@ -148,19 +169,12 @@ h3 {
   max-height: 100%;
 }
 
-.tab-content-container table {
-  font-family: "Cinzel", serif;
-}
-
-.table-main-col {
-  color: #fcb700;
-}
-
 .tab-content {
   display: none;
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: 
 }
 
 .tab-content img {
@@ -171,10 +185,11 @@ h3 {
   object-fit: contain;
 }
 
+/* NIGHTLORD SECTION */
+
 .nightlord-section {
   width: 100%;
   display: flex;
-  flex-direction: row;
   align-items: flex-start;
   gap: 2rem;
   /* adds space between children */
@@ -182,9 +197,11 @@ h3 {
   /* adds padding around the whole section */
 }
 
-.nightlord-selection {
+/* EXPEDITION SELECTION */
+
+.expedition-selection {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   margin: 0 1rem;
   /* optional: explicit margin if you want more than gap provides */
@@ -196,6 +213,97 @@ h3 {
   width: 120px;
   height: auto;
 }
+
+/* EXPEDITION MODAL */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 1000; /* On top of everything */
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5); /* Black w/ opacity */
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #1a1a1a;
+  margin: auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 60vw;
+  box-shadow: 0 0 20px #000;
+  color: #fff;
+}
+
+.close-button {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close-button:hover,
+.close-button:focus {
+  color: #fff;
+  text-decoration: none;
+}
+
+.expedition-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+  max-width: 100%;
+  width: 100%;
+  gap: 1.5rem;
+  justify-items: center;
+  margin: 2rem 0 1rem 0;
+}
+
+@media (min-width: 600px) {
+  .expedition-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 900px) {
+  .expedition-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1200px) {
+  .expedition-grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.expedition-option {
+  width: 250px;
+  height: auto;
+  border: 2px solid transparent;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: border 0.2s, transform 0.2s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.expedition-option:hover {
+  border: 2px solid #aaa;
+  transform: scale(1.1);
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+/* NIGHTLORD INFO */
 
 .nightlord-info {
   display: flex;
@@ -213,7 +321,7 @@ h3 {
   gap: 1.5rem;
 }
 
-.other-vulnerabilities {
+.vulnerabilities {
   display: flex;
   flex-direction: row;
   align-items: center;
