--- a/nightreigncs/nightreigncs/static/css/base.css
+++ b/nightreigncs/nightreigncs/static/css/base.css
@@ -43,7 +43,7 @@ h3 {
     transform: translateY(0);
   }
   100% {
-    transform: translateY(-400px); /* Scroll up amount – adjust based on content height */
+    transform: translateY(-17%); /* Scroll up amount – adjust based on content height */
   }
 }
 
@@ -97,121 +97,17 @@ h3 {
   flex-direction: column;
 }
 
-/* NIGHTFARERS SECTION */
-
-/* LEVEL REQUIREMENTS */
-
-.level-up-costs {
-  width: 12%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  padding-left: 1rem;
-}
-
-.level-up-costs table {
-  font-family: "Cinzel", serif;
-}
-
-.table-main-col {
-  color: #fcb700;
-}
-
-/* NIGHTFARERS */
-
-.character-section {
-  flex: 1;
-  min-height: 0;
-  /* allows flex child to shrink properly */
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-}
-
-.tab-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-around;
-  border: 1px solid #152142;
-  border-radius: 20px;
-}
-
-.tab-item {
-  padding: 15px 20px;
-  cursor: pointer;
-  border-radius: 20px;
-  flex-grow: 1;
-  text-align: center;
-  font-family: "Cinzel", serif;
-  font-weight: 300;
-}
-
-.tab-item:last-child {
-  border-right: none;
-}
-
-.tab-item.active {
-  background-color: rgb(4, 6, 18);
-  color: #fcb700;
-  font-family: "Cinzel", serif;
-  font-weight: 600;
-}
-
-.tab-content-container {
-  flex-grow: 1;
-  overflow: hidden;
-  /* don't allow scrollbars */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  max-height: 100%;
-}
-
-.tab-content {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 
-}
-
-.tab-content img {
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
-  object-fit: contain;
-}
-
-/* NIGHTLORD SECTION */
+/* EXPEDITION AND NIGHTLORD */
 
 .nightlord-section {
   width: 100%;
+  height: 20%;
   display: flex;
   align-items: flex-start;
   gap: 2rem;
   /* adds space between children */
   padding: 0.5rem 1rem;
   /* adds padding around the whole section */
-}
-
-/* EXPEDITION SELECTION */
-
-.expedition-selection {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 0 1rem;
-  /* optional: explicit margin if you want more than gap provides */
-  flex-shrink: 0;
-  /* prevents it from collapsing */
-}
-
-.expedition-icon {
-  width: 120px;
-  height: auto;
 }
 
 /* EXPEDITION MODAL */
@@ -303,13 +199,41 @@ h3 {
   cursor: pointer;
 }
 
-/* NIGHTLORD INFO */
+/* EXPEDITION SECTION */
+
+.expedition-selection {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.expedition {
+  width: 15%;
+  height: 100%;
+}
+
+.expedition h2 {
+  height: 20%;
+  margin-bottom: 0.3rem;
+}
+
+.expedition-icon {
+  max-height: 70%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+}
+
+/* NIGHTLORD SECTION */
 
 .nightlord-info {
   display: flex;
   flex-direction: column;
   align-items: center;
   flex-grow: 1;
+  width: 85%;
 }
 
 .nightlord-entry {
@@ -319,6 +243,14 @@ h3 {
   width: 100%;
   padding-right: 3rem;
   gap: 1.5rem;
+}
+
+.nightlord-entry h3 {
+  width: 15%;
+  white-space: normal;
+  word-break: normal;
+  overflow-wrap: normal;
+  text-align: center;
 }
 
 .vulnerabilities {
@@ -351,4 +283,105 @@ h3 {
   /* makes the text bold */
   text-align: center;
   /* optional, but good practice */
+}
+
+/* NIGHTFARERS SECTION */
+
+/* LEVEL REQUIREMENTS */
+
+.level-up-costs {
+  width: 12%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  padding-left: 1rem;
+}
+
+.level-up-costs table {
+  font-family: "Cinzel", serif;
+}
+
+.table-main-col {
+  color: #fcb700;
+}
+
+/* NIGHTFARERS */
+
+.character-section {
+  flex: 1;
+  min-height: 0;
+  /* allows flex child to shrink properly */
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.tab-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  border: 1px solid #152142;
+  border-radius: 20px;
+}
+
+.tab-item {
+  padding: 15px 20px;
+  cursor: pointer;
+  border-radius: 20px;
+  flex-grow: 1;
+  text-align: center;
+  font-family: "Cinzel", serif;
+  font-weight: 300;
+}
+
+.tab-item.active {
+  background-color: rgb(4, 6, 18);
+  color: #fcb700;
+  font-family: "Cinzel", serif;
+  font-weight: 600;
+}
+
+.tab-content-container {
+  flex-grow: 1;
+  overflow: hidden;
+  /* don't allow scrollbars */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  max-height: 100%;
+}
+
+.tab-content {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.tab-content img {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+}
+
+.watermark {
+  z-index: 1001;
+  position: absolute;
+  bottom: 10px;
+  right: 5%;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 1rem;
+  font-family: Cinzel, serif;
+  pointer-events: auto;
+}
+
+.watermark img {
+  display: inline-block;
+  width: 25px;
+  height: auto;
 }
