--- a/nightreigncs/nightreigncs/static/css/base.css
+++ b/nightreigncs/nightreigncs/static/css/base.css
@@ -22,46 +22,62 @@ h3 {
 
 /* LOCATIONS COLUMN*/
 
-.locations-wrapper {
+.locations {
+  display: flex;
+  flex-direction: column;
   height: 100vh; /* Adjust as needed */
   overflow: hidden;
   position: relative;
   width: 20%
 }
 
-.auto-scroll {
-  animation: scrollBounce 15s ease-in-out infinite alternate;
-  will-change: transform;
-}
-
-.auto-scroll:hover {
-  animation-play-state: paused;
-}
-
-@keyframes scrollBounce {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-17%); /* Scroll up amount – adjust based on content height */
-  }
+.location-tabs {
+  height: 8vh;
+  z-index: 900;
+  background: rgb(26, 34, 51);
 }
 
 .locations-column {
-  display: flex;
+  display: none;
   flex-direction: column;
   width: 100%;
+  overflow: hidden;
+}
+
+#map-locations {
+  display: block;
+  overflow-y: auto;
+  max-height: 92vh;
 }
 
 .location-item {
   display: flex;
+  flex-shrink: 0;
   margin: 0.1rem;
   border: 1px solid rgb(9, 21, 56);
   border-radius: 15px;
   padding: 0.5rem;
   align-items: center;
-  max-height: 80px;
+  height: 80px;
   overflow: hidden;
+}
+
+.auto-scroll::-webkit-scrollbar,
+#events-column::-webkit-scrollbar {
+  display: none;
+}
+
+.auto-scroll::-webkit-scrollbar-thumb,
+#events-column::-webkit-scrollbar-thumb {
+  background: #444;
+  border-radius: 3px;
+}
+
+.auto-scroll {
+  overflow-y: scroll;
+  position: relative;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;       /* Old IE/Edge: hide scrollbar */
 }
 
 .location-item p {
@@ -86,6 +102,47 @@ h3 {
 .loot-img {
   height: 30px;
   width: auto;
+}
+
+#events-column, #shifting-earth-column {
+  max-height: 92vh;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  margin-bottom: 1.5rem;
+}
+
+.event {
+  margin: 0.1rem;
+  border: 1px solid rgb(9, 21, 56);
+  border-radius: 15px;
+  padding: 0.2rem;
+  align-items: center;
+}
+
+.event * {
+  padding-left: 0.2rem;
+}
+
+.event-header img {
+  padding-left: 0;
+  margin-left: 1rem;
+}
+
+.event-body {
+  display: none;
+}
+.event-body.active {
+  display: block;
+}
+.event-body b {
+  color: rgb(130, 170, 250);
+}
+.event-body dt {
+  text-decoration: underline;
+  font-weight: bold;
+}
+.event-body dl {
+  padding: 0;
 }
 
 /* INFO COLUMN */
@@ -210,20 +267,26 @@ h3 {
 }
 
 .expedition {
+  display: flex;
+  flex-direction: column;
   width: 15%;
   height: 100%;
+  align-items: center;
 }
 
 .expedition h2 {
   height: 20%;
   margin-bottom: 0.3rem;
+  white-space: normal;
+  word-break: normal;
+  overflow-wrap: normal;
+  text-align: center;
 }
 
 .expedition-icon {
   max-height: 70%;
   width: auto;
   height: auto;
-  object-fit: contain;
 }
 
 /* NIGHTLORD SECTION */
@@ -346,6 +409,7 @@ h3 {
   border-radius: 20px;
   flex-grow: 1;
   text-align: center;
+  align-items: center;
   font-family: "Cinzel", serif;
   font-weight: 300;
 }
