Added the Crater and The Mountaintops' walkthrough steps

--- a/nightreigncs/cheatsheet/templates/cheatsheet.html
+++ b/nightreigncs/cheatsheet/templates/cheatsheet.html
@@ -62,7 +62,7 @@
               {% if step.image %}
               <img class="walkthrough-img clickable" src="{{ step.image.url }}" onclick="enlargeImage(event)">
               {% endif %}
-              {{step.description}}
+              <p>{{step.description}}</p>
             {% endfor %}
           </div>
         </div>
